# ResmonX

./: .gitattributes  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: index.html  styles.css
notes/: v0.2.5.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md
scripts/: publish-release.ps1
src/: App.tsx  Widget.tsx  index.css  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ipc.rs  lib.rs  main.rs
src-tauri/src/monitor/: control.rs  cpufreq.rs  etw.rs  gpu.rs  icons.rs  mod.rs  net.rs  pdh.rs  procmem.rs  services.rs  threads.rs
src/components/cards/: CoreGrid.tsx  Donut.tsx  MetricCard.tsx  Sparkline.tsx  resourceCards.tsx
src/components/layout/: Sidebar.tsx  Subtabs.tsx  Topbar.tsx  UpdateButton.tsx
src/components/process/: ConfirmProvider.tsx  ProcessMenu.tsx
src/components/tables/: DataTable.tsx  ProcIcon.tsx  ServiceBadge.tsx  UsageBar.tsx
src/components/ui/: sonner.tsx
src/components/views/: Cpu.tsx  Disk.tsx  Gpu.tsx  Memory.tsx  Network.tsx  Overview.tsx  Processes.tsx  props.ts
src/hooks/: useIcon.ts  useSnapshot.ts  useUpdate.ts
src/lib/: filters.ts  format.ts  tabs.ts  tauri.ts  types.ts
