[package]
name = "resmonx"
version = "0.5.1"
description = "Monitor de recursos para Windows"
authors = ["Zierchz"]
license-file = "../LICENSE"
edition = "2021"

[lib]
name = "resmonx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.36"
netstat2 = "0.11"
nvml-wrapper = "0.11"
ferrisetw = "1.2"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Etw",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Wdk_System_SystemInformation",
    "Win32_System_WindowsProgramming",
] }
